# homework_c_2_sem

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-and-lint.yml
src/hw_1_csv/: CMakeLists.txt  hw_1_csv.c  hw_1_csv.h  hw_1_csv_main.c
src/hw_5_1_dfa/: hw_5_1_dfa.md
src/hw_5_2_dfa/: CMakeLists.txt  README.md  hw_5_2_dfa.c  hw_5_2_dfa.h  hw_5_2_dfa_main.c
src/hw_5_aeroSoft/: CMakeLists.txt  hw_5_aeroSoft.c  hw_5_aeroSoft.h  hw_5_aeroSoft_main.c
src/hw_8_countries/: CMakeLists.txt  hw_8_countries.c  hw_8_countries.h  hw_8_countries_main.c
tests/: CMakeLists.txt  hw_5_2_dfa_test.c
